--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@payloadcms/db-mongodb": "^3.5.0",
     "@payloadcms/next": "^3.5.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
+    "@payloadcms/storage-vercel-blob": "^3.6.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
     "graphql": "^16.9.0",
     "next": "15.1.0",
     "payload": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
