setup TourLocation + live previews

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "^3.5.0",
+    "@payloadcms/live-preview-react": "^3.6.0",
     "@payloadcms/next": "^3.5.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
     "@payloadcms/storage-vercel-blob": "^3.6.0",
+    "@payloadcms/ui": "^3.6.0",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "graphql": "^16.9.0",
