role based access + initialize stripe plugin

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@payloadcms/db-mongodb": "^3.5.0",
     "@payloadcms/live-preview-react": "^3.6.0",
     "@payloadcms/next": "^3.5.0",
+    "@payloadcms/plugin-stripe": "^3.6.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
     "@payloadcms/storage-vercel-blob": "^3.6.0",
     "@payloadcms/ui": "^3.6.0",
