--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@payloadcms/db-mongodb": "^3.5.0",
     "@payloadcms/live-preview-react": "^3.6.0",
     "@payloadcms/next": "^3.5.0",
@@ -17,6 +18,11 @@
     "@payloadcms/richtext-lexical": "^3.5.0",
     "@payloadcms/storage-vercel-blob": "^3.6.0",
     "@payloadcms/ui": "^3.6.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -28,9 +34,11 @@
     "payload": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
