--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@payloadcms/db-mongodb": "^3.5.0",
-    "@payloadcms/live-preview-react": "^3.6.0",
-    "@payloadcms/next": "^3.5.0",
-    "@payloadcms/plugin-stripe": "^3.6.0",
-    "@payloadcms/richtext-lexical": "^3.5.0",
-    "@payloadcms/storage-vercel-blob": "^3.6.0",
-    "@payloadcms/ui": "^3.6.0",
+    "@payloadcms/db-mongodb": "^3.9.0",
+    "@payloadcms/live-preview-react": "^3.9.0",
+    "@payloadcms/next": "^3.9.0",
+    "@payloadcms/plugin-stripe": "^3.9.0",
+    "@payloadcms/richtext-lexical": "^3.9.0",
+    "@payloadcms/storage-vercel-blob": "^3.9.0",
+    "@payloadcms/ui": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
-    "payload": "^3.5.0",
+    "payload": "^3.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
@@ -41,14 +43,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/node": "^20.17.10",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
