--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "payload": "^3.16.0",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
